Changed overlay to scale relative to the viewport to ensure the screen is always covered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,8 @@ h2 {
 
 #game-start-overlay {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.9);
     display: flex;
     flex-direction: column;
@@ -107,8 +107,8 @@ h2 {
 #game-over-overlay,
 #winner-overlay {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: none;
     flex-direction: column;
     align-items: center;
